GCC: CRASH() should be annotated with NORETURN https://bugs.webkit.org/show_bug.cgi?id=142524

Patch by Michael Catanzaro <mcatanzaro@igalia.com> on 2015-03-10
Reviewed by Anders Carlsson.

Source/JavaScriptCore:

Don't return from a NORETURN function. This used to avoid a warning from GCC, but now it
causes one.

* jsc.cpp:

Source/WTF:

Add COMPILER(GCC) to #ifdefs that already exist for Clang.

* wtf/Assertions.cpp:
* wtf/Assertions.h:

Canonical link: https://commits.webkit.org/160572@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@181326 268f45cc-cd09-0410-ab3c-d52691b4dbfc